Planification refs #18353 - adding decline strategies table. It does not have admin via web

--- a/config/application.yml
+++ b/config/application.yml
@@ -2,6 +2,19 @@ defaults: &defaults
   payment_gateways:
   - MES
   - LITLE
+  modes:
+  - development
+  - production
+  bill_types:
+  - monthly
+  - yearly
+  credit_card_types:
+  - visa
+  - all
+  - master
+  decline_types:
+  - soft
+  - hard
 
 
 development:
