--- a/config/database.yml
+++ b/config/database.yml
@@ -17,14 +17,14 @@ test:
 
 production:
   adapter: mysql2
-  database: sac_platform_development
+  database: sac_platform_production
   host: localhost
   encoding: utf8
   user: root
 
 staging:
   adapter: mysql2
-  database: sac_platform_production
+  database: sac_platform_staging
   host: localhost
   encoding: utf8
   user: root
