--- a/config/application.yml
+++ b/config/application.yml
@@ -2,7 +2,7 @@ defaults: &defaults
   cc_encryption_key: reibel3y5estrada8
   payment_gateways:
   - MeS
-  - little
+  - litle
   modes:
   - development
   - production
@@ -25,7 +25,11 @@ defaults: &defaults
   - AuthorizationCapture
   - Refund
   - Capture
-
+  lyris_service:
+    domain: 'www.elabs10.com'
+    url: '/API/mailing_list.html'
+    username: '2010001547'
+    password: 'ARcor86'
 
 
 development:
