--- a/config/application.yml
+++ b/config/application.yml
@@ -22,6 +22,10 @@ defaults: &defaults
     others: 1000
   error_codes:
     success: '000'
+  fulfillment_products:
+    all: All
+    kit_card: Kit - Card
+    sloop: Sloop
 
 
 development:
