ref#19210 - Adding error_codes.

--- a/config/application.yml
+++ b/config/application.yml
@@ -22,7 +22,8 @@ defaults: &defaults
     others: 1000
   error_codes:
     success: '000'
-
+    not_found: '401'
+    data_invalid: '405'
 
 development:
   <<: *defaults
