refs #19179 - fulfilment changes base on ticket

--- a/config/application.yml
+++ b/config/application.yml
@@ -15,6 +15,7 @@ defaults: &defaults
     future_cancel: 201
     save_the_sale: 202
     recovery: 203
+    resend_fulfillment: 204
     active_email: 300
     prebill_email: 301
     cancellation_email: 302
