ref#19210 - Added more error_codes.

--- a/config/application.yml
+++ b/config/application.yml
@@ -28,6 +28,8 @@ defaults: &defaults
     blacklisted: '406'
     cant_recover_member: '407'
     invalid_credit_card: '9506'
+    credit_card_amount_invalid: '9787'
+    refund_invalid: '9788'
     nothing_to_change_tom: '9885'
     member_status_dont_allow: '9886'
     no_amount: '9887'    
