--- a/config/application.yml
+++ b/config/application.yml
@@ -1,6 +1,7 @@
 defaults: &defaults
   cc_encryption_key: reibel3y5estrada8
   max_reactivations: 3
+  next_retry_on_missing_decline: 30.days
   lyris_service:
     domain: 'www.elabs10.com'
     url: '/API/mailing_list.html'
