fixed unreachable and wrong phone.

--- a/config/application.yml
+++ b/config/application.yml
@@ -42,14 +42,13 @@ defaults: &defaults
     all: All
     kit_card: Kit - Card
     sloop: Sloop
-  wrong_address_options:
+  wrong_address:
     undeliverable_all: 'All'
     undeliverable_sloop: 'Sloop'
     undeliverable_kit_card: 'Kit - Card'
-  wrong_phone_number_options:
-    unreachable_all: 'All'
-    unreachable_sloop: 'Sloop'
-    unreachable_kit_card: 'Kit - Card'
+  wrong_phone_number:
+      unreachable: 'Unreachable'
+      wrong_phone_number: 'Wrong phone'
 
 development:
   <<: *defaults
