--- a/config/application.yml
+++ b/config/application.yml
@@ -17,11 +17,14 @@ defaults: &defaults
     save_the_sale: 202
     recovery: 203
     resend_fulfillment: 204
+    recovery_needs_approval: 205
+    enrollment_needs_approval: 206
     active_email: 300
     prebill_email: 301
     cancellation_email: 302
     refund_email: 303
     credit_card_already_in_use: 401
+    credit_card_blacklisted: 402
     others: 1000
   error_codes:
     success: '000'
