--- a/config/application.yml
+++ b/config/application.yml
@@ -28,6 +28,7 @@ defaults: &defaults
     refund_email: 303
     credit_card_already_in_use: 401
     credit_card_blacklisted: 402
+    member_email_blacklisted: 403
     others: 1000
   error_codes:
     success: '000'
