--- a/config/application.yml
+++ b/config/application.yml
@@ -16,6 +16,7 @@ defaults: &defaults
     membership_billing_hard_decline: 106
     membership_billing_soft_decline: 107
     credit_error: 108
+    membership_billing_without_pgc: 109
     cancel: 200
     future_cancel: 201
     save_the_sale: 202
