--- a/config/application.yml
+++ b/config/application.yml
@@ -32,6 +32,7 @@ defaults: &defaults
     credit_card_blacklisted: 402
     member_email_blacklisted: 403
     automatic_recycle_credit_card: 404
+    reset_club_cash: 405
     others: 1000
   error_codes:
     success: '000'
@@ -43,7 +44,6 @@ defaults: &defaults
     invalid_credit_card: '9506'
     credit_card_in_use: '9507'
     credit_card_blacklisted: '9508'
-    credit_card_amount_invalid: '9787'
     refund_invalid: '9788'
     nothing_to_change_tom: '9885'
     member_status_dont_allow: '9886'
