--- a/config/application.yml
+++ b/config/application.yml
@@ -41,7 +41,8 @@ defaults: &defaults
     member_not_saved: '404'
     blacklisted: '406'
     cant_recover_member: '407'
-    not_supported:'902'
+    duplicate_transaction: '900'
+    not_supported: '902'
     invalid_credit_card: '9506'
     credit_card_in_use: '9507'
     credit_card_blacklisted: '9508'
