--- a/config/application.yml
+++ b/config/application.yml
@@ -1,7 +1,8 @@
 defaults: &defaults
   cc_encryption_key: reibel3y5estrada8
   max_reactivations: 3
-  next_retry_on_missing_decline: 30.days
+  next_retry_on_missing_decline: 20.days
+  number_of_retries_on_missing_decline: 4
   lyris_service:
     domain: 'www.elabs10.com'
     url: '/API/mailing_list.html'
