--- a/config/application.yml
+++ b/config/application.yml
@@ -47,6 +47,7 @@ defaults: &defaults
     invalid_credit_card: '9506'
     credit_card_in_use: '9507'
     credit_card_blacklisted: '9508'
+    credit_card_blank: '9509'
     refund_invalid: '9788'
     nothing_to_change_tom: '9885'
     member_status_dont_allow: '9886'
