--- a/config/application.yml
+++ b/config/application.yml
@@ -3,6 +3,7 @@ defaults: &defaults
   max_reactivations: 3
   next_retry_on_missing_decline: 20.days
   number_of_retries_on_missing_decline: 4
+  club_cash_for_members_who_belongs_to_group: 200
   lyris_service:
     domain: 'www.elabs10.com'
     url: '/API/mailing_list.html'
