--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ test:
 
 production:
   adapter: mysql2
-  database: sac_platform_development
+  database: sac_platform_production
   host: localhost
   encoding: utf8
   user: root
