--- a/config/database.yml
+++ b/config/database.yml
@@ -15,6 +15,14 @@ test:
   encoding: utf8
   user: root
 
+production:
+  adapter: mysql2
+  database: sac_production
+  host: 127.0.0.1
+  port: 30013
+  encoding: utf8
+  user: root
+  password: 'pH03n[xk1{{s'
 
 staging:
   adapter: mysql2
