Feature refs #21944 - cancel and blakclist logic refactor, because its need it by chargeback. Added some cancel test.

--- a/config/application.yml
+++ b/config/application.yml
@@ -31,6 +31,7 @@ defaults: &defaults
     resend_fulfillment: 204
     recovery_needs_approval: 205
     enrollment_needs_approval: 206
+    blacklisted: 207
     active_email: 300
     prebill_email: 301
     cancellation_email: 302
