--- a/config/application.yml
+++ b/config/application.yml
@@ -61,11 +61,13 @@ defaults: &defaults
     nothing_to_change_tom: '9885'
     member_status_dont_allow: '9886'
     no_amount: '9887'    
+    member_already_set_wrong_address: '9888'
     credit_card_blank_with_grace: '9999'
     credit_card_blank_without_grace: '9997'
     member_email_blacklisted: '9996'
     tom_wihtout_gateway_configured: '9789'
     club_cash_transaction_not_successful: '9791'
+    fulfillment_error: '9801'
   fulfillment_products:
     all: All
     kit_card: Kit - Card
