ref#21771-added migration to change product column name on fulfillment. Also changed it on views, controller and models.

--- a/config/application.yml
+++ b/config/application.yml
@@ -34,6 +34,7 @@ defaults: &defaults
     enrollment_needs_approval: 206
     blacklisted: 207
     fulfillment_mannualy_mark_as_sent: 220
+    fulfillment_resend: 221
     active_email: 300
     prebill_email: 301
     cancellation_email: 302
