--- a/config/application.yml
+++ b/config/application.yml
@@ -63,6 +63,7 @@ defaults: &defaults
     member_status_dont_allow: '9886'
     no_amount: '9887'    
     member_already_set_wrong_address: '9888'
+    member_set_wrong_address_error: '9889'
     credit_card_blank_with_grace: '9999'
     credit_card_blank_without_grace: '9997'
     member_email_blacklisted: '9996'
