--- a/config/application.yml
+++ b/config/application.yml
@@ -86,6 +86,91 @@ defaults: &defaults
   wrong_phone_number:
       unreachable: 'Unreachable'
       wrong_phone_number: 'Wrong phone'
+  validations:
+    supported_countries:
+    - ca
+    - us
+    defaults:
+      email:
+        presence: true
+        uniqueness:
+          scope: :club_id
+        format: !ruby/regexp /^([0-9a-zA-Z\-_]([-_\.]?[+?]?[0-9a-zA-Z\-_])*@([0-9a-zA-Z]+[-_\.]?[0-9a-zA-Z]*\.)+[a-zA-Z]{2,9})$/
+      gender:
+        presence: true
+      terms_of_membership_id:
+        presence: true
+      type_of_phone_number:
+        presence: true
+        inclusion:
+          :within:  # this needs to be a Symbol
+          - Home 
+          - Mobile
+          - Other
+          allow_nil: true
+      phone_country_code:
+        presence: true
+        length:
+          :minimum: 1
+          :maximum: 4
+      phone_area_code:
+        presence: true
+        numericality: 
+          only_integer: true
+        length: 
+          :minimum: 1
+          :maximum: 8
+      phone_local_number:
+        presence: true
+        numericality: 
+          :only_integer: true
+        length: 
+          :minimum: 1
+          :maximum: 8
+    sets:
+      eastern:
+        testing:
+          saras: true
+      western:
+        first_name:
+          presence: true
+          format: !ruby/regexp /^[a-zA-Z0-9àáâäãåèéêëìíîïòóôöõøùúûüÿýñçčšžÀÁÂÄÃÅÈÉÊËÌÍÎÏÒÓÔÖÕØÙÚÛÜŸÝÑßÇŒÆČŠŽ∂ð '-.,]+$/
+          # format: !ruby/regexp /^[a-zA-Z0-9àáâäãåèéêëìíîïòóôöõøùúûüÿýñçčšžÀÁÂÄÃÅÈÉÊËÌÍÎÏÒÓÔÖÕØÙÚÛÜŸÝÑßÇŒÆČŠŽ∂ð '-.,]+$/u
+        last_name:
+          presence: true
+          format: !ruby/regexp /^[a-zA-Z0-9àáâäãåèéêëìíîïòóôöõøùúûüÿýñçčšžÀÁÂÄÃÅÈÉÊËÌÍÎÏÒÓÔÖÕØÙÚÛÜŸÝÑßÇŒÆČŠŽ∂ð '-.,]+$/
+        address:
+          format: !ruby/regexp /^[A-Za-z0-9àáâäãåèéêëìíîïòóôöõøùúûüÿýñçčšžÀÁÂÄÃÅÈÉÊËÌÍÎÏÒÓÔÖÕØÙÚÛÜŸÝÑßÇŒÆČŠŽ∂ð '-.,#]+$/
+        state:
+          presence: true
+          format: !ruby/regexp /^[A-Za-z0-9àáâäãåèéêëìíîïòóôöõøùúûüÿýñçčšžÀÁÂÄÃÅÈÉÊËÌÍÎÏÒÓÔÖÕØÙÚÛÜŸÝÑßÇŒÆČŠŽ∂ð '-.,]+$/
+        city:
+          presence: true
+          format: !ruby/regexp /^[A-Za-z0-9àáâäãåèéêëìíîïòóôöõøùúûüÿýñçčšžÀÁÂÄÃÅÈÉÊËÌÍÎÏÒÓÔÖÕØÙÚÛÜŸÝÑßÇŒÆČŠŽ∂ð '-.,]+$/
+    countries:
+#     "US"=>"^\d{5}([\-]?\d{4})?$",
+#     "UK"=>"^(GIR|[A-Z]\d[A-Z\d]??|[A-Z]{2}\d[A-Z\d]??)[ ]??(\d[A-Z]{2})$",
+#     "DE"=>"\b((?:0[1-46-9]\d{3})|(?:[1-357-9]\d{4})|(?:[4][0-24-9]\d{3})|(?:[6][013-9]\d{3}))\b",
+#     "CA"=>"^([ABCEGHJKLMNPRSTVXY]\d[ABCEGHJKLMNPRSTVWXYZ])\ {0,1}(\d[ABCEGHJKLMNPRSTVWXYZ]\d)$",
+#     "FR"=>"^(F-)?((2[A|B])|[0-9]{2})[0-9]{3}$",
+#     "IT"=>"^(V-|I-)?[0-9]{5}$",
+#     "AU"=>"^(0[289][0-9]{2})|([1345689][0-9]{3})|(2[0-8][0-9]{2})|(290[0-9])|(291[0-4])|(7[0-4][0-9]{2})|(7[8-9][0-9]{2})$",
+#     "NL"=>"^[1-9][0-9]{3}\s?([a-zA-Z]{2})?$",
+#     "ES"=>"^([1-9]{2}|[0-9][1-9]|[1-9][0-9])[0-9]{3}$",
+#     "DK"=>"^([D-d][K-k])?( |-)?[1-9]{1}[0-9]{3}$",
+#     "SE"=>"^(s-|S-){0,1}[0-9]{3}\s?[0-9]{2}$",
+      us:
+        sets:
+        - western
+        zip:
+          presence: true
+          format: !ruby/regexp /^\d{5}([\-]?\d{4})?$/
+      ca:
+        sets:
+        - western
+        zip:
+          presence: true
+          format: !ruby/regexp /^[ABCEGHJKLMNPRSTVXYabceghjklmnprstvxy]{1}[0-9]{1}[A-Za-z]{1}[\s]{1}[0-9]{1}[A-Za-z][0-9]{1}$/
 
 development:
   <<: *defaults
