--- a/config/application.yml
+++ b/config/application.yml
@@ -53,6 +53,7 @@ defaults: &defaults
     success: '000'
     not_found: '401'
     member_data_invalid: '405'
+    prospect_data_invalid: '403'
     member_not_saved: '404'
     blacklisted: '406'
     cant_recover_member: '407'
