Production capistrano fixes

--- a/config/database.yml
+++ b/config/database.yml
@@ -18,11 +18,10 @@ test:
 production:
   adapter: mysql2
   database: sac_production
-  host: 127.0.0.1
-  port: 30013
+  host: 50.116.17.164
   encoding: utf8
   user: root
-  password: 'pH03n[xk1{{s'
+  password: pH03n[xk1{{s
 
 staging:
   adapter: mysql2
