--- a/config/application.yml
+++ b/config/application.yml
@@ -45,6 +45,8 @@ defaults: &defaults
     enrollment_needs_approval: 206
     blacklisted: 207
     fulfillment_mannualy_mark_as_sent: 208
+    add_club_cash: 209
+    deducted_club_cash: 210
     credit_card_already_in_use: 401
     credit_card_blacklisted: 402
     member_email_blacklisted: 403
