--- a/config/application.yml
+++ b/config/application.yml
@@ -5,6 +5,7 @@ defaults: &defaults
   number_of_retries_on_missing_decline: 4
   club_cash_for_members_who_belongs_to_group: 200
   call_these_members_recipients: platformadmins@xagax.com
+  email_to_use_on_action_mailer_as_recipient: platformadmins@xagax.com
   lyris_service:
     domain: 'www.elabs10.com'
     url: '/API/mailing_list.html'
