ref#22786-Fixe bug. Added integration test.

--- a/config/application.yml
+++ b/config/application.yml
@@ -122,6 +122,7 @@ defaults: &defaults
           - Mobile
           - Other
           :allow_nil: true
+          :allow_blank: true
       phone_country_code:
         presence: true
         numericality: 
