--- a/config/application.yml
+++ b/config/application.yml
@@ -62,6 +62,17 @@ defaults: &defaults
     others: 1000
   error_messages:
     member_data_invalid: "Member data is invalid."
+    credit_card_blacklisted: "That credit card is blacklisted, please use another."
+    credit_card_already_in_use: "Credit card is already in use. call support."
+    member_email_blacklisted: "Member email is blacklisted."
+    credit_card_blank: "Credit card is blank. Insert number or allow credit card blank."
+    cant_recover_member: "Cant recover member. Max reactivations reached."
+    invalid_credit_card: "Credit card is invalid or is expired!"
+    blacklisted: "Member or credit card are blacklisted"
+    member_not_saved: "Could not save member."
+    member_set_wrong_address_error: "Could not set member's address as undeliverable."
+    member_already_set_wrong_address: "Member's address already set as wrong address."
+    credit_card_in_use: "That credit card already in use."
   error_codes:
     success: '000'
     not_found: '401'
