refs #22499 - error messages updated according to note 12 sent by Gustavo.

--- a/config/application.yml
+++ b/config/application.yml
@@ -62,17 +62,17 @@ defaults: &defaults
     others: 1000
   error_messages:
     member_data_invalid: "Member data is invalid."
-    credit_card_blacklisted: "That credit card is blacklisted, please use another."
+    credit_card_blacklisted: "Unfortunately, there was a problem processing your credit card. Please call member services at: xxx-xxx-xxxx."
     credit_card_already_in_use: "Credit card is already in use. call support."
-    member_email_blacklisted: "Member email is blacklisted."
-    credit_card_blank: "Credit card is blank. Insert number or allow credit card blank."
-    cant_recover_member: "Cant recover member. Max reactivations reached."
-    invalid_credit_card: "Credit card is invalid or is expired!"
-    blacklisted: "Member or credit card are blacklisted"
-    member_not_saved: "Could not save member."
+    member_email_blacklisted: "There was a problem processing your enrollment. Please call member services at: xxx-xxx-xxxx."
+    credit_card_blank: "There was an error with your credit card information. Please verify your information and resubmit."
+    cant_recover_member: "There was a problem processing your enrollment. Please call member services at: xxx-xxx-xxxx."
+    invalid_credit_card: "There was an error with your credit card information. Please verify your information and resubmit."
+    blacklisted: "There was a problem processing your enrollment. Please call member services at: xxx-xxx-xxxx."
+    member_not_saved: "There was a problem processing your enrollment. Please call member services at: xxx-xxx-xxxx."
     member_set_wrong_address_error: "Could not set member's address as undeliverable."
     member_already_set_wrong_address: "Member's address already set as wrong address."
-    credit_card_in_use: "That credit card already in use."
+    credit_card_in_use: "We're sorry but our system shows that the credit card you entered is already in use! Please try another card or call our members services at: xxx-xxx-xxxx."
     fulfillment_out_of_stock: "Product does not have stock."
     fulfillment_error: "Could not be marked as sent."
     credit_amount_invalid: "Credit amount must be a positive number."
