--- a/config/application.yml
+++ b/config/application.yml
@@ -16,7 +16,7 @@ defaults: &defaults
     url: https://www.merchante-solutions.com/
     path: /jsp/reports/report_api.jsp
   mes_aus_service:
-    folder: "#{Rails.root}/mes_account_updater_files"
+    folder: <%= "#{Rails.root}/mes_account_updater_files" %>
     url: https://www.merchante-solutions.com/
   operation_types: 
     #billing
