--- a/config/application.yml
+++ b/config/application.yml
@@ -69,6 +69,7 @@ defaults: &defaults
     member_set_wrong_address_error: "Could not set member's address as undeliverable."
     member_already_set_wrong_address: "Member's address already set as wrong address."
     credit_card_in_use: "We're sorry but our system shows that the credit card you entered is already in use! Please try another card or call our members services at: xxx-xxx-xxxx."
+    expired_credit_card: "Credit card to activate is expired."
     fulfillment_out_of_stock: "Product does not have stock."
     fulfillment_error: "Could not be marked as sent."
     credit_amount_invalid: "Credit amount must be a positive number."
