ref#24035-Added api_id validation. It only accepts numbers.

--- a/config/application.yml
+++ b/config/application.yml
@@ -159,6 +159,9 @@ defaults: &defaults
         length: 
           :minimum: 1
           :maximum: 8
+      api_id:
+        numericality:
+          :only_integer: true
     sets:
       western:
         first_name:
