refs #24035 - allow nil and blank values. refs #24039

--- a/config/application.yml
+++ b/config/application.yml
@@ -162,6 +162,8 @@ defaults: &defaults
       api_id:
         numericality:
           :only_integer: true
+          :allow_nil: true
+          :allow_blank: true
     sets:
       western:
         first_name:
