--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -192,12 +192,14 @@ development:
   
   # Enable textmate links
   # textmate: true
+  app_name: SAC Platform - Phoenix (Devel)
 
 test:
   <<: *default_settings
   # It almost never makes sense to turn on the agent when running
   # unit, functional or integration tests or the like.
   monitor_mode: false
+  app_name: SAC Platform - Phoenix (Test)
 
 # Turn on the agent in production for 24x7 monitoring.  New Relic
 # testing shows an average performance impact of < 5 ms per
@@ -206,6 +208,7 @@ test:
 production:
   <<: *default_settings
   monitor_mode: true
+  app_name: SAC Platform - Phoenix
 
 # Many applications have a staging environment which behaves
 # identically to production.  Support for that environment is provided
