refs #24713 - Revert "refs #23751 - removed some references to operations related to communications"
This reverts commit 821daddbad6b6adc9e2587be4f4d972150bb1821.

Conflicts:

	test/integration/members_bill_test.rb
	test/integration/members_enrollment_test.rb

--- a/config/application.yml
+++ b/config/application.yml
@@ -50,6 +50,11 @@ defaults: &defaults
     member_email_blacklisted: 403
     automatic_recycle_credit_card: 404
     aus_recycle_credit_card: 405
+    #communication
+    active_email: 300     
+    prebill_email: 301    
+    cancellation_email: 302 
+    refund_email: 303 
     #other
     others: 1000
   error_messages:
