--- a/config/application.yml
+++ b/config/application.yml
@@ -227,7 +227,7 @@ production:
   call_these_members_recipients: 'rmosher@stoneacreinc.com,wbryant@stoneacreinc.com,mfulginiti@stoneacreinc.com,kflynn@stoneacreinc.com,jsmith@stoneacreinc.com'
   mes_report_service:
     user: Stoneacrereports
-    password: Letmein123
+    password: do3!lAjo5
     url: https://www.merchante-solutions.com/
     path: /jsp/reports/report_api.jsp
   mes_aus_service:
