added validation on api_id. Now it will be unique for each member,

--- a/config/application.yml
+++ b/config/application.yml
@@ -167,6 +167,7 @@ defaults: &defaults
           :minimum: 1
           :maximum: 8
       api_id:
+        uniqueness: true
         numericality:
           :only_integer: true
           :allow_nil: true
