added scope on uniqueness validation on member's api_id

--- a/config/application.yml
+++ b/config/application.yml
@@ -167,7 +167,8 @@ defaults: &defaults
           :minimum: 1
           :maximum: 8
       api_id:
-        uniqueness: true
+        uniqueness:
+          :scope: :club_id
         numericality:
           :only_integer: true
           :allow_nil: true
