fixed validation on api_id. Now we allow multiples blank values

--- a/config/application.yml
+++ b/config/application.yml
@@ -168,6 +168,7 @@ defaults: &defaults
           :maximum: 8
       api_id:
         uniqueness:
+          :allow_blank: true
           :scope: :club_id
         numericality:
           :only_integer: true
