--- a/config/application.yml
+++ b/config/application.yml
@@ -81,6 +81,7 @@ defaults: &defaults
     credit_card_blank_with_grace: "Payment gateway not found."
     duplicate_transaction: "Duplicated Transaction:"
     next_bill_date_blank: "Next bill date should not be blank."
+    member_already_active: "Membership already exists for this email address. Contact Member Services if you would like more information at: xxx-xxx-xxxx."
   error_codes:
     success: '000'
     not_found: '401'
@@ -90,6 +91,7 @@ defaults: &defaults
     blacklisted: '406'
     cant_recover_member: '407'
     member_enrollment_error: '408'
+    member_already_active: '409'
     duplicate_transaction: '900'
     not_supported: '902'
     invalid_credit_card: '9506'
