--- a/config/application.yml
+++ b/config/application.yml
@@ -82,6 +82,7 @@ defaults: &defaults
     duplicate_transaction: "Duplicated Transaction:"
     next_bill_date_blank: "Next bill date should not be blank."
     member_already_active: "Membership already exists for this email address. Contact Member Services if you would like more information at: xxx-xxx-xxxx."
+    club_is_not_enable_for_new_enrollments: "We are not accepting new enrollments at this time. Please call member services at: xxx-xxx-xxxx."
   error_codes:
     success: '000'
     not_found: '401'
@@ -92,6 +93,7 @@ defaults: &defaults
     cant_recover_member: '407'
     member_enrollment_error: '408'
     member_already_active: '409'
+    club_is_not_enable_for_new_enrollments: '410'
     duplicate_transaction: '900'
     not_supported: '902'
     invalid_credit_card: '9506'
