--- a/config/application.yml
+++ b/config/application.yml
@@ -6,7 +6,7 @@ defaults: &defaults
   club_cash_for_members_who_belongs_to_group: 200
   call_these_members_recipients: platformadmins@xagax.com
   email_to_use_on_action_mailer_as_recipient: platformadmins@xagax.com
-  email_to_use_on_duplicated_email_sync_error: cam@xagax.com
+  email_to_use_on_duplicated_email_sync_error: clawler@stoneacreinc.com
   lyris_service:
     domain: 'www.elabs10.com'
     url: '/API/mailing_list.html'
