--- a/config/application.yml
+++ b/config/application.yml
@@ -6,7 +6,7 @@ defaults: &defaults
   club_cash_for_members_who_belongs_to_group: 200
   call_these_members_recipients: platformadmins@xagax.com
   email_to_use_on_action_mailer_as_recipient: platformadmins@xagax.com
-  email_to_use_on_duplicated_email_sync_error: clawler@stoneacreinc.com
+  email_to_use_on_duplicated_email_sync_error: platformadmins@xagax.com
   lyris_service:
     domain: 'www.elabs10.com'
     url: '/API/mailing_list.html'
@@ -223,8 +223,10 @@ production:
 
 prototype:
   <<: *defaults
+  email_to_send_product_list: 'platformadmins@xagax.com'
 
 staging:
   <<: *defaults
-
+  email_to_use_on_duplicated_email_sync_error: clawler@stoneacreinc.com
+  email_to_send_product_list: 'ddanch@stoneacreinc.com,tbrady@stoneacreinc.com'
 
