--- a/config/application.yml
+++ b/config/application.yml
@@ -129,6 +129,7 @@ defaults: &defaults
     unrecoverable_error: '411'
     duplicate_transaction: '900'
     not_supported: '902'
+    product_empty: '903'
     invalid_credit_card: '9506'
     credit_card_in_use: '9507'
     credit_card_blacklisted: '9508'
