--- a/config/application.yml
+++ b/config/application.yml
@@ -130,6 +130,7 @@ defaults: &defaults
     duplicate_transaction: '900'
     not_supported: '902'
     product_empty: '903'
+    product_out_of_stock: '904'
     invalid_credit_card: '9506'
     credit_card_in_use: '9507'
     credit_card_blacklisted: '9508'
