--- a/config/application.yml
+++ b/config/application.yml
@@ -7,6 +7,7 @@ defaults: &defaults
   call_these_members_recipients: platformadmins@xagax.com
   email_to_use_on_action_mailer_as_recipient: platformadmins@xagax.com
   email_to_use_on_duplicated_email_sync_error: platformadmins@xagax.com
+  others_product: "SLOOPS"
   lyris_service:
     domain: 'www.elabs10.com'
     url: '/API/mailing_list.html'
