--- a/config/application.yml
+++ b/config/application.yml
@@ -151,6 +151,7 @@ defaults: &defaults
     club_cash_transaction_not_successful: '9791'
     fulfillment_error: '9801'
     fulfillment_reason_blank: '9802'
+    fulfillment_is_renwed: '9803'
   fulfillment_products:
     all: All
     kit_card: Kit - Card
