--- a/config/application.yml
+++ b/config/application.yml
@@ -8,6 +8,7 @@ defaults: &defaults
   email_to_use_on_action_mailer_as_recipient: platformadmins@xagax.com
   email_to_use_on_duplicated_email_sync_error: platformadmins@xagax.com
   others_product: "SLOOPS"
+  kit_card_product: 'KIT-CARD'
   lyris_service:
     domain: 'www.elabs10.com'
     url: '/API/mailing_list.html'
