--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -201,6 +201,11 @@ test:
   monitor_mode: false
   app_name: SAC Platform - Phoenix (Test)
 
+demo:
+  <<: *default_settings
+  monitor_mode: true
+  app_name: SAC Platform - Phoenix (Demo)
+
 # Turn on the agent in production for 24x7 monitoring.  New Relic
 # testing shows an average performance impact of < 5 ms per
 # transaction, so you can leave this on all the time without
