--- a/config/application.yml
+++ b/config/application.yml
@@ -174,6 +174,7 @@ defaults: &defaults
     member_set_wrong_address_error: '9889'
     credit_card_blank_without_grace: '9997'
     member_email_blacklisted: '9996'
+    member_could_no_be_blacklisted: '9998'
     tom_wihtout_gateway_configured: '9789'
     club_cash_transaction_not_successful: '9791'
     fulfillment_error: '9801'
