--- a/config/application.yml
+++ b/config/application.yml
@@ -176,6 +176,7 @@ defaults: &defaults
     member_already_set_wrong_address: '9888'
     member_set_wrong_address_error: '9889'
     credit_card_blank_without_grace: '9997'
+    billing_date_not_reached: '9999'
     member_email_blacklisted: '9996'
     member_could_no_be_blacklisted: '9998'
     tom_wihtout_gateway_configured: '9789'
